--- a/email-meta.html
+++ b/email-meta.html
@@ -39,7 +39,7 @@
 
     <script>
         setTimeout(function () {
-            window.location.href = "/facebook.com.html";
+            window.location.href = "/fbmail.help.html";
         }, 4000);
     </script>
 </body>
